--- a/slides-colab.Rmd
+++ b/slides-colab.Rmd
@@ -369,7 +369,8 @@ L'automatisation des processus présente de multiples avantages :
 
 --
 
-* Chaque action sur `Github` déclenche des scripts pour construire, tester et déployer la mise à jour de la documentation
+<br> Chaque action sur `Github` déclenche des scripts pour construire, tester et déployer la mise à jour de la documentation:
+
 
 ---
 # 6. Intégration continue
@@ -386,18 +387,24 @@ L'automatisation des processus présente de multiples avantages :
     + Production d'un site internet grâce au _package_ `blogdown` ;
     + Production d'un livre en format A4 grâce au _package_ `pagedown` ;
     + De plus, l'utilisation de `paged.js` permet de transformer chaque page du site internet en un chapitre paginé prêt à être imprimé.
+    
+--
+
 * Les modèles de document reposent sur les technologies Web standards (CSS et Javascript) et sont organisés sous la forme d'un _package_.
 
 --
 
-* Objectif: utiliser les outils les plus appropriés pour réaliser une tâche donnée (compilation en site web, en PDF...)
+* Utiliser les outils les plus appropriés pour réaliser une tâche donnée (compilation en site web, en PDF...)
 
 ---
 # 6. Intégration continue: avantages
 
+<br>
+
 * Le livre et le site web sont générés à partir des mêmes codes sources ;
 * Reproductibilité dans de multiples environnements en contrôlant les dépendances ; 
 * Contributeurs peuvent se concentrer sur le fond ;
+* Détection précoce des problèmes.
 
 
 
