--- a/slides-colab.Rmd
+++ b/slides-colab.Rmd
@@ -310,7 +310,7 @@ knitr::include_graphics("https://images-na.ssl-images-amazon.com/images/I/91CJLS
 
 
 * __Transparence__: l'ensemble du projet est librement accessible sur le dépôt Github, sous licence libre;
-* __Ouverture__: tout agent de l'Insee qui le souhaite peut rejoindre le projet à tout moment. Les modalités de contribution peuvent prendre différentes formes, détaillées dans le guide des contributeurs;
+* __Ouverture__: toute personne qui le souhaite peut rejoindre le projet à tout moment. Les modalités de contribution peuvent prendre différentes formes, détaillées dans le guide des contributeurs;
 * __Bienveillance__: toutes les idées, initiatives et propositions sont les bienvenues, et les contributeurs veillent à se soutenir les uns les autres;
 * __Exigence__: les modifications de la documentation sont systématiquement soumises à une revue par les contributeurs du projet et ne sont acceptées que lorsqu'elles rencontrent une large approbation;
 * __Reproductibilité__: les exemples développés dans la documentation doivent être reproductibles.
@@ -323,15 +323,18 @@ exposant la philosophie du projet
 # 4. Quelle collaboration sur Github ?
 ## Permettre à tous de contribuer
 
-* Plusieurs modalités de contribution proposées pour offrir:
-    + légèreté
+* __Plusieurs modalités de contribution__ proposées pour offrir:
+    + légèreté ;
     + flexibilité
+
+--
+
 * Les modalités les plus simples sont possibles via une interface graphique:
     + *Issues* : espace de débat et d'échanges: signaler un *bug*, proposer 
-une nouvelle fiche, un nouvel exemple, participer à un débat sur un package...
-    + Un bouton *Edit this page* pour utiliser l'interface visuelle Github
+une nouvelle fiche, un nouvel exemple, participer à un débat sur un *package*...
+    + Un bouton *Edit this page* `r fontawesome::fa("fab fa-github")` pour utiliser l'interface visuelle `Github` ;
 afin d'éditer la dernière version de la fiche (la source de vérité) et proposer
-un changmeent (pull request)
+un changement (*pull request* automatiquement créée).
 * Des *pull request* pour ajouter des éléments plus substanciels (nouvelles 
 fiches, ajout de paragraphe, évolution de la tuyauterie...)
 
